# WorkingTitle

./: .gitignore  CMakeLists.txt  LICENSE
source/core/: vector.h
source/core/include/: vector_2.h  vector_n.h
source/core/include/core/: Types.h  Vector2.h  VectorN.h
source/core/tests/: test_vector.cpp
source/core/unittests/: test_vector.cpp  vector.cpp
source/graphics/: CMakeLists.txt
source/graphics/include/graphics/: GraphicsInterface.h  GraphicsSFML.h
source/graphics/source/: GraphicsInterface.cpp  GraphicsSFML.cpp
source/graphics/tests/: sfml_graphics.cpp
source/nyra/: CMakeLists.txt
source/nyra.sfml/: CMakeLists.txt
source/nyra.sfml/include/nyra/sfml/: Graphics.h  Sprite.h  TileMap.h  Window.h
source/nyra.sfml/source/: Graphics.cpp  Sprite.cpp  TileMap.cpp  Window.cpp
source/nyra.sfml/tests/: sfml_engine.cpp  sfml_graphics.cpp  sfml_window.cpp
source/nyra.sfml/unittests/: sfml_graphics.cpp  sfml_sprite.cpp  sfml_window.cpp
source/nyra/include/nyra/: AnimateFrames.h  AnimateInterface.h  Constants.h  GraphicsInterface.h  Image.h  Matrix.h  RenderableInterface.h  SpriteInterface.h  TileMapInterface.h  Transform.h  Vector2.h  WindowInterface.h
source/nyra/source/: AnimateFrames.cpp  AnimateInterface.cpp  GraphicsInterface.cpp  Image.cpp  Matrix.cpp  RenderableInterface.cpp  SpriteInterface.cpp  Transform.cpp  WindowInterface.cpp
source/nyra/unittests/: animate_frames.cpp  image.cpp  transform.cpp  vector.cpp
source/os/include/: window.h
source/os/tests/: test.cpp
source/window/: CMakeLists.txt
source/window/include/window/: WindowInterface.h  WindowSFML.h
source/window/source/: WindowInterface.cpp  WindowSFML.cpp
source/window/tests/: sfml_window.cpp
source/window/unittests/: sfml_window.cpp
